fixes padding for slab-info in footer for better readability for screens below 768px width

--- a/_sass/media/_screen.scss
+++ b/_sass/media/_screen.scss
@@ -598,6 +598,13 @@ footer[role="contentinfo"] {
 }
 
 #slab-info {
+
+  padding-top: 20px;
+
+  @media screen and (min-width: 768px){
+    padding-top: 0;
+  }
+
   ul {
     margin:0 0 rhythm(1);
     padding:0;
